# arrow-gpu

./: .gitignore  404.html  Cargo.toml  Readme.md  blank_tables.html  codecov.yml  index.html  kernels.html  print.html  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml
benches/: compare_gpu_arrow.rs  compare_sum.rs
compute_shaders/: add_f32_scalar.wgsl  add_u8_or_i8_scalar.wgsl  f32_array.wgsl  f32_assign_scalar.wgsl  f32_reduction.wgsl  f32_scalar.wgsl  f32_unary.wgsl  u32_array.wgsl  u32_assign_scalar.wgsl  u32_scalar.wgsl
compute_shaders/f32/: broadcast.wgsl  scalar.wgsl
compute_shaders/i16/: trigonometry.wgsl  utils.wgsl
compute_shaders/i32/: array.wgsl  broadcast.wgsl  scalar.wgsl
compute_shaders/i8/: trigonometry.wgsl  utils.wgsl
compute_shaders/u16/: trigonometry.wgsl  utils.wgsl
compute_shaders/u32/: array.wgsl  broadcast.wgsl
compute_shaders/u8/: trigonometry.wgsl  utils.wgsl
crates/arithmetic/: Cargo.toml
crates/arithmetic/compute_shaders/f32/: aggregate.wgsl  array.wgsl  neg.wgsl  scalar.wgsl
crates/arithmetic/compute_shaders/i32/: aggregate.wgsl  array.wgsl  scalar.wgsl
crates/arithmetic/compute_shaders/u16/: scalar.wgsl
crates/arithmetic/compute_shaders/u32/: aggregate.wgsl  array.wgsl  scalar.wgsl
crates/arithmetic/src/: aggregate_kernels.rs  arithmetic_kernels.rs  f32.rs  i32.rs  kernels.rs  lib.rs  u16.rs  u32.rs
crates/array/: Cargo.toml
crates/array/compute_shaders/: add_u16_or_i16_scalar.wgsl  add_u32_or_i32_scalar.wgsl  add_u64_or_i64_scalar.wgsl
crates/array/compute_shaders/f32/: broadcast.wgsl  scalar.wgsl
crates/array/compute_shaders/i16/: cast_i32.wgsl  utils.wgsl
crates/array/compute_shaders/i32/: array.wgsl  broadcast.wgsl  scalar.wgsl
crates/array/compute_shaders/u16/: scalar.wgsl  utils.wgsl
crates/array/compute_shaders/u32/: broadcast.wgsl  scalar.wgsl
crates/array/src/: lib.rs
crates/array/src/array/: boolean_gpu.rs  buffer.rs  compute_pipeline.rs  date32_gpu.rs  f32_gpu.rs  gpu_device.rs  i16_gpu.rs  i32_gpu.rs  i8_gpu.rs  mod.rs  null_bit_buffer.rs  primitive_array_gpu.rs  types.rs  u16_gpu.rs  u32_gpu.rs  u8_gpu.rs
crates/array/src/array/gpu_ops/: f32_ops.rs  mod.rs
crates/array/src/gpu_utils/: append_hashmap.rs  compute_pipeline.rs  compute_query.rs  gpu_device.rs  mod.rs
crates/array/src/kernels/: aggregate.rs  arithmetic.rs  broadcast.rs  logical.rs  mod.rs
crates/array/src/utils/: mod.rs
crates/arrow/: Cargo.toml
crates/arrow/examples/: Readme.md  simple.rs
crates/arrow/src/: kernels.rs  lib.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: compare_gpu_arrow.rs  compare_sum.rs
crates/cast/: Cargo.toml
crates/cast/compute_shaders/boolean/: cast_f32.wgsl
crates/cast/compute_shaders/f32/: cast_u8.wgsl
crates/cast/compute_shaders/i16/: cast_f32.wgsl  cast_i32.wgsl
crates/cast/compute_shaders/i8/: cast_f32.wgsl  cast_i16.wgsl  cast_i32.wgsl
crates/cast/compute_shaders/u16/: cast_f32.wgsl  cast_u32.wgsl
crates/cast/compute_shaders/u8/: cast_f32.wgsl  cast_u16.wgsl  cast_u32.wgsl
crates/cast/src/: boolean_cast.rs  f32_cast.rs  i16_cast.rs  i8_cast.rs  lib.rs  u16_cast.rs  u32_cast.rs  u8_cast.rs
crates/compare/: Cargo.toml
crates/compare/compute_shaders/f32/: cmp.wgsl  min_max.wgsl
crates/compare/src/: f32.rs  i16.rs  i32.rs  i8.rs  lib.rs  u16.rs  u32.rs  u8.rs
crates/logical/: Cargo.toml
crates/logical/compute_shaders/i16/: shift.wgsl
crates/logical/compute_shaders/i32/: logical.wgsl  not.wgsl  shift.wgsl
crates/logical/compute_shaders/i8/: shift.wgsl
crates/logical/compute_shaders/u16/: shift.wgsl
crates/logical/compute_shaders/u32/: any.wgsl  countbitones.wgsl  logical.wgsl  not.wgsl  shift.wgsl
crates/logical/compute_shaders/u8/: shift.wgsl
crates/logical/src/: boolean.rs  i16.rs  i32.rs  i8.rs  lib.rs  u16.rs  u32.rs  u8.rs
crates/math/: Cargo.toml
crates/math/src/: f32.rs  i32.rs  lib.rs
crates/python_wgarrow/: Cargo.toml  pyproject.toml  requirements-dev.txt
crates/python_wgarrow/src/: buffer.rs  datatype.rs  lib.rs
crates/routines/: Cargo.toml
crates/routines/compute_shaders/16bit/: merge.wgsl
crates/routines/compute_shaders/32bit/: merge.wgsl  put.wgsl  take.wgsl
crates/routines/compute_shaders/8bit/: merge.wgsl
crates/routines/compute_shaders/bool/: merge.wgsl  put.wgsl  take.wgsl
crates/routines/compute_shaders/u32/: merge_null_buffer.wgsl
crates/routines/src/: bool.rs  f32.rs  i16.rs  i32.rs  i8.rs  lib.rs  merge.rs  put.rs  take.rs  u16.rs  u32.rs  u8.rs
crates/test_macros/: Cargo.toml
crates/test_macros/src/: lib.rs
crates/trigonometry/: Cargo.toml
crates/trigonometry/compute_shaders/f32/: hyperbolic.wgsl  trigonometry.wgsl
crates/trigonometry/compute_shaders/i16/: hyperbolic.wgsl  trigonometry.wgsl
crates/trigonometry/compute_shaders/i8/: hyperbolic.wgsl  trigonometry.wgsl
crates/trigonometry/compute_shaders/u16/: hyperbolic.wgsl  trigonometry.wgsl
crates/trigonometry/compute_shaders/u8/: hyperbolic.wgsl  trigonometry.wgsl
crates/trigonometry/src/: f32_kernel.rs  i16_kernel.rs  i8_kernel.rs  lib.rs  u16_kernel.rs  u8_kernel.rs
docs/: book.toml
docs/src/: SUMMARY.md  blank_tables.md  dataypes.md
docs/src/kernels/: arithmetic.md  cast.md  compare.md  logical.md  math.md  reduction.md  swizzle.md  trigonometry.md
kernels/: arithmetic.html  cast.html  compare.html  logical.html  math.html  reduction.html  swizzle.html  trigonometry.html
src/: lib.rs  test_bin.rs
src/array/: date32_gpu.rs  f32_gpu.rs  gpu_device.rs  i16_gpu.rs  i32_gpu.rs  i8_gpu.rs  mod.rs  primitive_array_gpu.rs  u16_gpu.rs  u32_gpu.rs  u8_gpu.rs
src/array/cpu_array/: mod.rs  primitive_array.rs
src/array/gpu_array/: f32_gpu.rs  mod.rs  primitive_array_gpu.rs  u32_gpu.rs
src/array/gpu_ops/: f32_ops.rs  i16_ops.rs  i32_ops.rs  i8_ops.rs  mod.rs  u16_ops.rs  u32_ops.rs  u8_ops.rs
src/kernels/: add_ops.rs  add_scalar.rs  aggregate.rs  arithmetic.rs  broadcast.rs  cast.rs  mod.rs  trigonometry.rs
tests/: api_test.rs
(+17 files in other folders)
