[workspace]
resolver = "2"
members = [
    "crates/test_macros",
    "crates/trigonometry",
    "crates/benchmarks",
    "crates/arrow",
    "crates/array",
    "crates/cast",
    "crates/arithmetic",
    "crates/logical",
    "crates/routines",
    "crates/compare",
    "crates/math"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wgpu = "22.1.0"
pollster = "0.3.0"
bytemuck = "1.16.1"
futures-intrusive = "0.5.0"
log =  { version =  "0.4.22" }
hashbrown = "0.14.5"

[profile.dev]
debug="line-tables-only"