[workspace]
resolver = "2"
members = [
    "crates/test_macros",
    "crates/trigonometry",
    "crates/benchmarks",
    "crates/arrow",
    "crates/array",
    "crates/cast",
    "crates/arithmetic",
    "crates/logical",
    "crates/routines",
    "crates/compare",
    "crates/math"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
wgpu = "24.0.3"
pollster = "0.4.0"
bytemuck = "1.22.0"
futures-intrusive = "0.5.0"
log =  { version =  "0.4.26" }
hashbrown = "0.15.0"

[profile.dev]
debug="line-tables-only"