[package]
name = "arrow_gpu_arithmetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait =  { workspace = true}
arrow_gpu_array = { path = "../array" }

[dev-dependencies]
arrow_gpu_test_macros = {path = "../test_macros"}
tokio = { workspace = true}
once_cell = { workspace = true }
pollster = { workspace = true }