[package]
name = "arrow_gpu_array"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu =  { workspace = true}
pollster = { workspace = true}
bytemuck = { workspace = true}
futures-intrusive = { workspace = true}
tokio = { workspace = true}
async-trait =  { workspace = true}
log =  { workspace = true}
