[package]
name = "arrow_gpu_array"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu =  { workspace = true}
pollster = { workspace = true}
bytemuck = { workspace = true}
futures-intrusive = { workspace = true}
log =  { workspace = true}
hashbrown = { workspace = true}

[features]
profile = []