[package]
name = "arrow_gpu_benchmarks"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow_gpu = { path = "../arrow" }

[dev-dependencies]
env_logger = "0.11.2"
criterion = "0.5.1"
arrow = "49.0.0"
pollster = {workspace = true}


[[bench]]
name = "compare_gpu_arrow"
harness = false

[[bench]]
name = "compare_sum"
harness = false