[package]
name = "arrow_gpu_logical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow_gpu_array = { path = "../array" }
wgpu = { workspace = true }

[dev-dependencies]
arrow_gpu_test_macros = {path = "../test_macros"}

[features]
profile = ["arrow_gpu_array/profile"]