[package]
name = "arrow_gpu_routines"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow_gpu_array = { path = "../array" }
wgpu = { workspace = true }

[dev-dependencies]
arrow_gpu_test_macros = {path = "../test_macros"}

[features]
profile = ["arrow_gpu_array/profile"]