[package]
name = "arrow_gpu_trigonometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow_gpu_array = { path = "../array" }
async-trait = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
arrow_gpu_test_macros = {path = "../test_macros"}
tokio = { workspace = true }
once_cell = { workspace = true }
pollster = { workspace = true }